--- a/templates/netinfo/page_sites_add.html
+++ b/templates/netinfo/page_sites_add.html
@@ -9,7 +9,7 @@
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
         {% block title %}{{ title }}{% endblock %}
         {% block css %}
-        {% include 'netinfo/comp_css_sites.html' %}
+        {% include 'netinfo/comp_css_sites_add.html' %}
         {% endblock %}
     <!-- </head> -->
     <!-- <body> -->
@@ -35,63 +35,119 @@
                 <div class="wrapper wrapper-content animated fadeInRight">
                     <div class="row justify-content-md-center">
                         <div class="col-lg-6">
-                            <div class="ibox ">
+                            <div class="ibox">
                                 <div class="ibox-title">
                                     <h5>New Site</h5>
+                                    <div class="ibox-tools">
+                                        <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-wrench"></i></a>
+                                        <ul class="dropdown-menu dropdown-user">
+                                            <li><a href="#" class="dropdown-item">Config option 1</a></li>
+                                            <li><a href="#" class="dropdown-item">Config option 2</a></li>
+                                        </ul>
+                                        <a class="close-link">
+                                        <i class="fa fa-times"></i>
+                                        </a>
+                                    </div>
                                 </div>
                                 <div class="ibox-content">
-                                    <form role="form" id="form" action="{% url 'sites_add' %}" method="post">
-                                        {% csrf_token %}
-                                        {{ sites_form.non_field_errors }}
-                                        {% for field in sites_form.visible_fields %}
-                                        <div class="form-group row">
-                                            <label for="{{ field.id_for_label }}" class="col-lg-2 col-form-label">{{ field.label }}</label>
-                                            {% if sites_form.is_bound %}
-                                            {% if field.errors %}
-                                            <div class="col-lg-10">
-                                            {% render_field field class="form-control" %}
-                                            {% if field.help_text %}
-                                                <span class="form-text m-b-none">{{ field.help_text }}</span>
-                                            {% endif %}
-                                            {% for error in field.errors %}
-                                                <label id="-error" class="error" for="">{{ error }}</label>
-                                            {% endfor %}
+                                    <form id="form" action="#" class="wizard-big">
+                                        <h1>Site</h1>
+                                        <fieldset>
+                                            <div class="row">
+                                                <div class="col-lg-8">
+                                                    <div class="form-group">
+                                                        <label>Username *</label>
+                                                        <input id="userName" name="userName" type="text" class="form-control required">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label>Password *</label>
+                                                        <input id="password" name="password" type="text" class="form-control required">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label>Confirm Password *</label>
+                                                        <input id="confirm" name="confirm" type="text" class="form-control required">
+                                                    </div>
+                                                </div>
                                             </div>
-                                            {% else %}
-                                            <div class="col-lg-10">
-                                            {% render_field field class="form-control" %}
-                                            {% if field.help_text %}
-                                                <span class="form-text m-b-none">{{ field.help_text }}</span>
-                                            {% endif %}
+                                        </fieldset>
+                                        <h1>Contacts</h1>
+                                        <fieldset>
+                                            <div class="row">
+                                                <div class="col-lg-8">
+                                                    <div class="form-group">
+                                                        <label>First name *</label>
+                                                        <input id="name" name="name" type="text" class="form-control required">
+                                                    </div>
+                                                    <div class="form-group">
+                                                        <label>Last name *</label>
+                                                        <input id="surname" name="surname" type="text" class="form-control required">
+                                                    </div>
+                                                </div>
                                             </div>
-                                            {% endif %}
-                                            {% else %}
-                                            <div class="col-lg-10">
-                                            {% render_field field class="form-control" %}
-                                            {% if field.help_text %}
-                                                <span class="form-text m-b-none">{{ field.help_text }}</span>
-                                            {% endif %}
-                                            </div>
-                                            {% endif %}
-                                        </div>
-                                        {% endfor %}
-                                        <hr/>
-                                        <button class="btn btn-secondary btn-sm mb-3" type="button" data-toggle="collapse" data-target="#contact-collapse" aria-expanded="false" aria-controls="contact-collapse">Contacts</button>
-                                        <div class="collapse" id="contact-collapse">
-                                            <div class="dynamic-stuff"></div>
-                                            <div><button type="button" class="btn btn-success btn-sm add-one"><i class="fa fa-plus"></i>&nbsp;Add</button></div>
-                                        </div>
-                                        <hr/>
-                                        <div class="card-text text-sm-right">
-                                            <a class="small"><button type="submit" class="btn btn-primary btn-sm" id="submit-site-contact">Submit</button></a>
-                                            <a class="small"><button type="reset" class="btn btn-danger btn-sm" id="reset-site-contact">Reset</button></a>
-                                            <a class="small" href=".."><button type="button" class="btn btn-secondary btn-sm">Cancel</button></a>
-                                        </div>
+                                        </fieldset>
                                     </form>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <!-- <div class="col-lg-6">
+                        <div class="ibox ">
+                            <div class="ibox-title">
+                                <h5>New Site</h5>
+                            </div>
+                            <div class="ibox-content">
+                                <form role="form" id="form" action="{% url 'sites_add' %}" method="post">
+                                    {% csrf_token %}
+                                    {{ sites_form.non_field_errors }}
+                                    {% for field in sites_form.visible_fields %}
+                                    <div class="form-group row">
+                                        <label for="{{ field.id_for_label }}" class="col-lg-2 col-form-label">{{ field.label }}</label>
+                                        {% if sites_form.is_bound %}
+                                        {% if field.errors %}
+                                        <div class="col-lg-10">
+                                        {% render_field field class="form-control" %}
+                                        {% if field.help_text %}
+                                            <span class="form-text m-b-none">{{ field.help_text }}</span>
+                                        {% endif %}
+                                        {% for error in field.errors %}
+                                            <label id="-error" class="error" for="">{{ error }}</label>
+                                        {% endfor %}
+                                        </div>
+                                        {% else %}
+                                        <div class="col-lg-10">
+                                        {% render_field field class="form-control" %}
+                                        {% if field.help_text %}
+                                            <span class="form-text m-b-none">{{ field.help_text }}</span>
+                                        {% endif %}
+                                        </div>
+                                        {% endif %}
+                                        {% else %}
+                                        <div class="col-lg-10">
+                                        {% render_field field class="form-control" %}
+                                        {% if field.help_text %}
+                                            <span class="form-text m-b-none">{{ field.help_text }}</span>
+                                        {% endif %}
+                                        </div>
+                                        {% endif %}
+                                    </div>
+                                    {% endfor %}
+                                    <hr/>
+                                    <button class="btn btn-secondary btn-sm mb-3" type="button" data-toggle="collapse" data-target="#contact-collapse" aria-expanded="false" aria-controls="contact-collapse">Contacts</button>
+                                    <div class="collapse" id="contact-collapse">
+                                        <div class="dynamic-stuff"></div>
+                                        <div><button type="button" class="btn btn-success btn-sm add-one"><i class="fa fa-plus"></i>&nbsp;Add</button></div>
+                                    </div>
+                                    <hr/>
+                                    <div class="card-text text-sm-right">
+                                        <a class="small"><button type="submit" class="btn btn-primary btn-sm" id="submit-site-contact">Submit</button></a>
+                                        <a class="small"><button type="reset" class="btn btn-danger btn-sm" id="reset-site-contact">Reset</button></a>
+                                        <a class="small" href=".."><button type="button" class="btn btn-secondary btn-sm">Cancel</button></a>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div> -->
                 </div>
                 {% endblock %}
                 <!-- end row-content -->
