--- a/templates/netinfo/page_sites_detail.html
+++ b/templates/netinfo/page_sites_detail.html
@@ -8,7 +8,7 @@
         <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
         {% block title %}{{ title }}{% endblock %}
         {% block css %}
-        {% include 'netinfo/comp_css_sites.html' %}
+        {% include 'netinfo/comp_css_sites_detail.html' %}
         {% endblock %}
     <!-- </head> -->
     <!-- <body> -->
@@ -36,11 +36,11 @@
                         <div class="col-lg-6">
                             <div class="tabs-container">
                                 <ul class="nav nav-tabs" role="tablist">
-                                    <li><a class="nav-link active" data-toggle="tab" href="#tab-1">Basic Info</a></li>
-                                    <li><a class="nav-link" data-toggle="tab" href="#tab-2">Contacts</a></li>
+                                    <li><a class="nav-link active" data-toggle="tab" href="#tab-site">Basic Info</a></li>
+                                    <li><a class="nav-link" data-toggle="tab" href="#tab-contact">Contacts</a></li>
                                 </ul>
                                 <div class="tab-content">
-                                    <div role="tabpanel" id="tab-1" class="tab-pane active">
+                                    <div role="tabpanel" id="tab-site" class="tab-pane active">
                                         <div class="panel-body">
                                             <div class="ibox ">
                                                 <div class="ibox-title">
@@ -97,7 +97,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div role="tabpanel" id="tab-2" class="tab-pane">
+                                    <div role="tabpanel" id="tab-contact" class="tab-pane">
                                         <div class="panel-body">
                                             <div class="ibox ">
                                                 <div class="ibox-title">
